; ModuleID = '/home/carl/AnghaBench/linux/net/tipc/extr_bearer.c_tipc_disable_l2_media.c'
source_filename = "/home/carl/AnghaBench/linux/net/tipc/extr_bearer.c_tipc_disable_l2_media.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_bearer = type { i32, i32 }
%struct.net_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tipc_disable_l2_media(%struct.tipc_bearer* %0) #0 {
  %2 = alloca %struct.tipc_bearer*, align 8
  %3 = alloca %struct.net_device*, align 8
  store %struct.tipc_bearer* %0, %struct.tipc_bearer** %2, align 8
  %4 = load %struct.tipc_bearer*, %struct.tipc_bearer** %2, align 8
  %5 = getelementptr inbounds %struct.tipc_bearer, %struct.tipc_bearer* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @rtnl_dereference(i32 %6)
  %8 = inttoptr i64 %7 to %struct.net_device*
  store %struct.net_device* %8, %struct.net_device** %3, align 8
  %9 = load %struct.tipc_bearer*, %struct.tipc_bearer** %2, align 8
  %10 = getelementptr inbounds %struct.tipc_bearer, %struct.tipc_bearer* %9, i32 0, i32 0
  %11 = call i32 @dev_remove_pack(i32* %10)
  %12 = load %struct.net_device*, %struct.net_device** %3, align 8
  %13 = getelementptr inbounds %struct.net_device, %struct.net_device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @RCU_INIT_POINTER(i32 %14, i32* null)
  %16 = call i32 (...) @synchronize_net()
  %17 = load %struct.net_device*, %struct.net_device** %3, align 8
  %18 = call i32 @dev_put(%struct.net_device* %17)
  ret void
}

declare dso_local i64 @rtnl_dereference(i32) #1

declare dso_local i32 @dev_remove_pack(i32*) #1

declare dso_local i32 @RCU_INIT_POINTER(i32, i32*) #1

declare dso_local i32 @synchronize_net(...) #1

declare dso_local i32 @dev_put(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
